[docs] initial commit for documentation

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py35,py37,lint
+envlist = py35,py37,lint,docs
 
 
 [testenv]
@@ -16,3 +16,13 @@ deps=
     flake8
 commands=
     flake8 --ignore=E221,E203,E241,E501,F401 piston
+
+[testenv:docs]
+basepython=
+    python
+changedir=
+    docs
+deps=
+    sphinx
+commands=
+    sphinx-build -b html ./ ./html
