--- a/.gitignore
+++ b/.gitignore
@@ -63,9 +63,10 @@ target/
 posts
 
 # compile locally
-piston/static/css/*.css
-piston/static/js/*.js
-piston/static/.webassets-cache
+piston/web/static/css/*.css
+piston/web/static/js/*.js
+piston/web/static/.webassets-cache
+
 env
 
 contrib/build
