--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ commands=
 deps=
     flake8
 commands=
-    flake8 --ignore=E221,E203,E241,E501,F401 piston
+    flake8 --ignore=E501,F401 piston
 
 [testenv:docs]
 basepython=
