[rebranding] steem -> piston-lib && piston -> piston-cli

--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,4 +1,4 @@
--e git://github.com/xeroc/python-graphenelib@develop#egg=graphenelib
--e git://github.com/xeroc/python-steem@develop#egg=steem
+graphenelib
+piston-lib
 pytest
 coverage
